--- a/css/styleprincipal.css
+++ b/css/styleprincipal.css
@@ -68,3 +68,159 @@ header{
  #pull:hover{
  	color:#fff;
  }
+
+
+ /*Media query*/ 
+ @media(min-width: 1080px){
+	nav a{
+		width: 95px;
+	}
+	#menu{
+		background: none no-repeat scroll 0 0 #F3F3F3; 
+		height: 60px;
+	}
+	#enlaces{
+		padding:10px;
+	}
+	#logo{
+		margin: 5px;
+		background: url(../images/encuesta1.png) no-repeat;
+		width: 200px;
+		height: 100px;
+		display: inline-block;
+		position: absolute;
+		left: 30px;
+		top: 0px;
+	}
+	#logo:hover{
+		background: url(../images/encuesta2.png) no-repeat;
+	}
+	#logo:active{
+		background: url(index.php) no-repeat;
+	}
+ }
+ @media(min-width: 1024px){
+ 	nav a{
+		width: 95px;
+	}
+	nav {
+		width: 100%;
+	}
+	#enlaces{
+		font-size: 13px;
+	}
+	#logo{
+		background: url(../images/encuesta3.png) no-repeat;
+		width: 200px;
+		height: 100px;
+		display: inline-block;
+		position: absolute;
+		left: 30px;
+		top: 0px;
+	}
+	#logo:hover{
+		background: url(../images/encuesta4.png) no-repeat;
+	}
+ }
+ @media(min-width: 800px){
+
+ }
+ @media(min-width: 768px){
+	nav {
+ 		width: 100%;
+ 	}
+ 	nav a{
+ 		width: 80px;
+ 	}
+ 	#enlaces{
+ 		font-size: 12px;
+ 	}
+ 	#logo{
+ 		width: 130px;
+ 		}
+  }
+@media(min-width: 685px){
+	nav {
+ 		width: 100%;
+ 	}
+ 	nav a{
+ 		width: 75px;
+ 	}
+ 	#logo{
+ 		left: 0px;
+ 		top: 0px;
+ 		}
+ 	#enlaces{
+ 		font-size: 11px;
+ 		padding: 0px;
+ 	}	
+  }
+ @media(min-width: 600px){
+ 	nav a{
+ 		width: 63px;
+ 	}
+ 	#enlaces{
+ 		font-size: 11px;
+ 	}	
+ 	#logo{
+	width:130px; 
+ 		}
+}
+@media(min-width: 568px){
+ 	 #menu{
+ 	 	border-bottom: 0;
+		height: auto;
+		background: #fff;
+ 	 }
+ 	 nav ul{
+ 	 	width: 100%;
+ 	 	display:block;
+ 	 	height: auto;
+ 	 	display: none;
+ 	 }
+ 	 nav a {
+ 	 	text-align: center;
+ 	 	width:100%;
+ 	 	text-indent: 25px;
+ 	 }
+ 	 nav li a{
+ 	 	border-bottom: 1px solid #576979;
+ 	 }
+ 	 nav #pull{
+ 	 	display: block;
+ 	 	background: #00a2e8 url(../images/encuesta3.png)no-repeat;
+ 	 	width: 100%;
+ 	 	position: relative;
+	 }
+	 nav #pull:hover{
+	 	display: block;
+	 	background: #00a2e8 url(../images/encuesta4.png)no-repeat;
+	 	width: 100%;
+	 	position:relative;	
+	 }
+	 #pull:after{
+	 	content: ""
+	 	background: url(..images/nav-icon.png) no-repeat;
+	 	width: 30px;
+		height: 30px;
+		display: inline-block;
+		position: absolute;
+		right: 15px;
+		top: 10px;
+		}
+	#logo{
+		display: none;
+	}
+ }
+  @media(min-width: 480px){
+
+ }
+  @media(min-width: 380px){
+
+ }
+  @media(min-width: 320px){
+
+ }
+  @media(min-width: 240px){
+
+ }
